--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
    <section class="conteudo-principal"></section>
    <h2 class="titulo-principal"> meus objetivos do ano_<span></h2></span>
    <div class="botoes">
-        <button class="'botao"> Cursos na Alura</button>
+        <button class="'botao ativo"> Cursos na Alura</button>
         <button class="botao">Criar projetos em javascript</button>
         <button class="botao">Criar um portifolio</button>
         <button class="botao">Atualizar meu curriculo</button>
        </div>
        </section>
+       <script src="main.js"></script>
 
 </body>
 </html>
